--- a/app/assets/stylesheets/pages/_registrations_new.scss
+++ b/app/assets/stylesheets/pages/_registrations_new.scss
@@ -1,15 +1,15 @@
-.login-sec {
+.register-sec {
   background: #fff;
 
-  .login-wrapper{
+  .register-wrapper{
     display: flex;
     justify-content: center;
     width: 100%;
     padding: 50px 0;
 
-    .email-login{
-      .login-form {
-        width: 300px;
+    .email-register{
+      .register-form {
+        width: 330px;
         text-align: center;
         border: 1px solid #000;
         padding: 20px 0;
@@ -28,21 +28,21 @@
           color: #000;
         }
     
-        input[type="email"], input[type="password"] {
+        input[type="text"], input[type="email"], input[type="password"] {
           border: 0;
           background: none;
           display: block;
           margin: 0 auto;
           text-align: center;
           border: 2px solid #2980b9;
-          padding: 14px 10px;
+          padding: 10px 10px;
           width: 200px;
           outline: none;
           border-radius: 24px;
           transition: 0.25s;
         }
     
-        input[type="email"]:focus, input[type="password"]:focus {
+        input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus {
           width: 280px;
           border-color: #55efc4;
         }
@@ -51,8 +51,7 @@
           border: 0;
           background: none;
           display: block;
-          margin: 0 auto;
-          margin-top: 20px;
+          margin: 20px auto;
           text-align: center;
           border: 2px solid #55efc4;
           padding: 14px 40px;
