--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -17,7 +17,7 @@ section#show.show
 
       - if current_user == @user
         .user-manage
-          = link_to '編集', edit_user_path(@user), class:'btn btn-danger manage-item'
+          = link_to '編集', edit_user_registration_path(@user), class:'btn btn-danger manage-item'
           = link_to '削除', @user, method: :delete, class:'btn btn-danger manage-item'
   
     dl.show-list
