--- a/app/views/records/index.html.slim
+++ b/app/views/records/index.html.slim
@@ -1,9 +1,9 @@
 section#mv
   .inner
 
-section#users
+section.records-sec
   .inner
-    .users-search
+    .records-search
       / 検索ボックス
     .users-body
       ul.nav.nav-tabs
