--- a/app/views/records/index.html.slim
+++ b/app/views/records/index.html.slim
@@ -5,7 +5,7 @@ section.records-sec
   .inner
     .records-search
       / 検索ボックス
-    .users-body
+    .records-body
       ul.nav.nav-tabs
         li.nav-item
           a href="#all-content" class="nav-link #{ 'active' unless params[:active_tab] == 'favs' }" data-toggle="tab" All
