--- a/app/assets/stylesheets/pages/_error_message.scss
+++ b/app/assets/stylesheets/pages/_error_message.scss
@@ -1,14 +1,13 @@
-.error-wrapper {
-  padding-top: 5px;
-  color: #ed5353;
+#error_explanation {
+  margin-top: 20px;
 
-  .error-alert {
-    font-weight: bold;
+  h2 {
+    font-size: 1.6rem;
   }
 
-  .error-detail {
+  ul {
     margin-top: 5px;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     list-style-type: circle;
     text-align: left;
     padding-left: 30px;
