--- a/app/assets/stylesheets/pages/_record_table.scss
+++ b/app/assets/stylesheets/pages/_record_table.scss
@@ -48,9 +48,11 @@ table.users-table {
       .follow-btn {
         font-size: 2rem;
       }
-      .table-userimage {
+      .table-avatar {
         object-fit: cover;
         border-radius: 50%;
+        height: 30px;
+        width: 30px;
       }
 
       .table-usernames {
@@ -58,7 +60,7 @@ table.users-table {
         align-items: center;
 
         .table-username {
-          margin-left: 5px;
+          margin-left: 15px;
         }
       }
     }
