--- a/app/assets/stylesheets/pages/_users_show.scss
+++ b/app/assets/stylesheets/pages/_users_show.scss
@@ -53,11 +53,60 @@
 
         dt {
           color: gray;
+          font-size: 1.4rem;
         }
 
         dd {
           font-weight: bold;
+          font-size: 1.8rem;
         }
+      }
+    }
+
+    .tabs {
+      position: relative;
+      width: 100%;
+
+      .tab-btns {
+        display: flex;
+        justify-content: space-around;
+        height: 40px;
+
+        span {
+          display: block;
+          width: 33.3%;
+          border-bottom: 1px solid #cacaca;
+          cursor: pointer;
+        }
+  
+        #lamp {
+          width: 11.1%;
+          height: 2px;
+          display: block;
+          background: #000;
+          position: absolute;
+          top: 38px;
+          transition: all .3s ease-in;
+        }
+  
+        #lamp.content2 {
+          left: 44.4%;
+          transition: all .3s ease-in;
+        }
+  
+        #lamp.content3 {
+          left: 77.7%;
+          transition: all .3s ease-in;
+        }
+  
+        #lamp.content1 {
+          left: 11.1%;
+          transition: all .3s ease-in;
+        }
+      }
+
+      .tab-content {
+        padding: 15px;
       }
     }
   }
