--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -21,7 +21,8 @@ section.show-sec
         dd= @user.display_latest
       .info-item
         dt 1mo. Change
-        dd= @user.weight_change_rate
+        dd class="#{@user.change_class}"
+          = @user.display_change
       .info-item
         dt 1mo. Hight
         dd= @user.display_max
@@ -32,7 +33,19 @@ section.show-sec
         dt BMI
         dd= @user.bmi
 
-    canvas#myChart
+    .tabs
+      .tab-btns
+        span.content1 記録履歴
+        span.content2 グラフ
+        span.content3 フォロー
+        #lamp.content1
+      .tab-content
+        .content1
+          | testtesteteset
+        .content2
+          canvas#myChart
+        .content3
+          | フォローリスト
 
 javascript:
   var ctx = document.getElementById("myChart").getContext('2d');
