--- a/app/views/users/_follower_list.html.slim
+++ b/app/views/users/_follower_list.html.slim
@@ -1,1 +1,10 @@
-div= follower.name
+.follower-list-wrapper
+  .follower-cards
+    .follower-card
+      .card-inner
+        .follower-image
+          = image_tag follower.avatar_url, class: "follower-avatar"
+        .follower-name= follower.name
+        - if @user == current_user
+          div id="user-#{follower.id}" class="follow-btn-wrapper"
+            = render partial:'follow_btn', locals: { follower: follower}
