--- a/app/views/users/_follow_btn.html.slim
+++ b/app/views/users/_follow_btn.html.slim
@@ -1,6 +1,12 @@
 - if current_user.following?(follower)
-  = link_to user_relationships_inshow_path(follower.id), method: :delete, remote: true, class: "followed-btn" do
+  = link_to "/users/#{follower.id}/relationships_#{url_part}", method: :delete, remote: true, class: "followed-btn" do
     span フォロー中
 - else
-  = link_to user_relationships_inshow_path(follower.id), method: :post, remote: true, class: "follow-btn" do
+  = link_to "/users/#{follower.id}/relationships_#{url_part}", method: :post, remote: true, class: "follow-btn" do
     span フォロー
+/ - if current_user.following?(follower)
+/   = link_to user_relationships_inlist_path(follower.id), method: :delete, remote: true, class: "followed-btn" do
+/     span フォロー中
+/ - else
+/   = link_to user_relationships_inlist_path(follower.id), method: :post, remote: true, class: "follow-btn" do
+/     span フォロー
