--- a/app/assets/stylesheets/pages/_record_table.scss
+++ b/app/assets/stylesheets/pages/_record_table.scss
@@ -49,7 +49,7 @@ table.users-table {
       font-weight: normal;
 
 
-      .follow-btn {
+      .follow-star {
         font-size: 2rem;
       }
       .table-avatar {
