--- a/app/assets/stylesheets/pages/_users_show.scss
+++ b/app/assets/stylesheets/pages/_users_show.scss
@@ -22,6 +22,11 @@
       .user-manage{
         text-align: left;
         margin-left: 30px;
+
+        h1 {
+          margin-bottom: 5px;
+        }
+
         .user-menu {
           margin-top: 10px;
 
