--- a/app/views/records/_follow.html.slim
+++ b/app/views/records/_follow.html.slim
@@ -1,5 +1,5 @@
 - if current_user && !(current_user == user)
   - if current_user.following?(user)
-    = link_to icon('fas', 'star', class:'follow-btn'), user_relationships_path(user.id), method: :delete, remote: true
+    = link_to icon('fas', 'star', class:'follow-star'), user_relationships_path(user.id), method: :delete, remote: true
   - else
-    = link_to icon('far', 'star', class:'follow-btn'), user_relationships_path(user.id), method: :post, remote: true
+    = link_to icon('far', 'star', class:'follow-star'), user_relationships_path(user.id), method: :post, remote: true
