--- a/app/views/relationships/create_inshow.js.erb
+++ b/app/views/relationships/create_inshow.js.erb
@@ -1,1 +1,1 @@
-$("#user-<%= @follower.id %>").html("<%= j(render partial: 'users/follow_btn', locals: { follower: @follower }) %>")
+$(".follow-beside-avatar").html("<%= j(render partial: 'users/follow_btn', locals: { follower: @follower, url_part:'inshow' }) %>")
