--- a/app/assets/stylesheets/setting/_color.scss
+++ b/app/assets/stylesheets/setting/_color.scss
@@ -1,5 +1,5 @@
 //key-color
-$main-color: #8CC182;
+$main-color: #303030;
 $logo-color: #FFF61D;
 $gray-color: #F4F4F4;
 $gray-border: rgba(147,146,146, 0.6);
