--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,34 +9,10 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    header.header
-      .inner
-        nav
-          h1.header-logo
-            = link_to "Weinance", root_path
+    - unless user_signed_in?
+      = render 'layouts/signin_as_guest'
 
-          ul.header-list
-            li.header-item
-              = link_to "Home", root_path
-            li.header-item
-              = link_to "About", about_path
-            - if current_user
-              li.header-item
-                = link_to 'LogOut', destroy_user_session_path, method: :delete
-              li.header-item
-                = link_to current_user do
-                  - if current_user.image.present?
-                    = image_tag(current_user.image.url, class: "header-avatar")
-                  - else
-                    = image_tag("/assets/no_user.png", class:"header-avatar")
-            - else
-              li.header-item
-                = link_to "LogIn", login_path
-              li.header-item._register
-                = link_to "Register", new_user_registration_path
-    
-    //header分の空スペース
-    .header-space
+    = render 'layouts/header'
 
     - flash.each do |key, value|
       = content_tag(:div, value, class: "#{key}") 
