--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -24,7 +24,7 @@ section.show-sec
         dd class="#{@user.change_class}"
           = @user.display_change
       .info-item
-        dt 1mo. Hight
+        dt 1mo. High
         dd= @user.display_max
       .info-item
         dt 1mo. Low
