--- a/app/assets/stylesheets/pages/_users_show.scss
+++ b/app/assets/stylesheets/pages/_users_show.scss
@@ -30,7 +30,7 @@
         .user-menu {
           margin-top: 10px;
 
-          a {
+          a, button {
             font-size: 1.4rem;
             border-radius: 20px;
 
