[add]プロフィール編集に関するテストを追加

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,6 +20,7 @@ html
     = yield
     = render 'layouts/footer'
 
+    <script src="https://unpkg.com/tippy.js@5"></script>
     = debug(params) if Rails.env.development?
 
 
