--- a/app/assets/stylesheets/pages/_users_show.scss
+++ b/app/assets/stylesheets/pages/_users_show.scss
@@ -113,8 +113,12 @@
       .tab-content {
         padding: 15px;
 
-        .edit-col {
+        .weight-col {
           width: 30%;
+        }
+
+        .bmi-col {
+          width: 20%;
         }
       }
     }
