--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,10 +5,10 @@ html
       | Weinance
     = csrf_meta_tags
     = csp_meta_tag
-
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
+    / ゲストユーザーログインバー
     - unless user_signed_in?
       = render 'layouts/signin_as_guest'
 
