--- a/app/assets/stylesheets/pages/_header.scss
+++ b/app/assets/stylesheets/pages/_header.scss
@@ -42,6 +42,28 @@
             color: $gray-color;
           }
 
+          .notification-off {
+            color: #fff;
+            font-size: 2rem;
+          }
+    
+          .notification-on {
+            position: relative;
+            font-size: 2rem;
+            color: #fff;
+    
+            &::after {
+              content: "";
+              width: 1rem;
+              height: 1rem;
+              border-radius: 50%;
+              background: #fd79a8;
+              position: absolute;
+              bottom: -2px;
+              right: -2px;
+            }
+          }
+
           .header-avatar {
             height: 40px;
             width: 40px;
