--- a/app/views/notifications/_notification.html.slim
+++ b/app/views/notifications/_notification.html.slim
@@ -5,7 +5,7 @@
   .notification
     .notification-avatar
       = link_to user_path(visitor) do
-        = image_tag visitor.avatar_url, Zclass: 'header-avatar'
+        = image_tag visitor.avatar_url, class: 'header-avatar'
     .notification-msg
       strong
         = visitor.name
@@ -24,4 +24,5 @@
           = Comment.find_by(id: notification.comment_id)&.body
           
       .notification-time.text-muted
+        = icon('far', 'clock')
         = time_ago_in_words(notification.created_at).downcase + "前"
