--- a/app/assets/stylesheets/pages/_record_show.scss
+++ b/app/assets/stylesheets/pages/_record_show.scss
@@ -66,10 +66,14 @@ section.record-show {
     }
 
     .show-comment-area {
+      width: 100%;
+      max-width: 600px;
+      margin: 0 auto;
+
       & > div {
         display: flex;
         align-items: center;
-        width: 95%;
+        width: 100%;
         margin: 0 auto;
         padding: 8px;
         border-bottom: 1px solid #e6e6e6;
